<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CrusHead</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_category">Categorias</string>

    <!-- Preferences -->
    <string name="pref_acerca_de">Acerca De</string>
    <string name="pref_version">Versión de la aplicación</string>
    <string name="pref_develop">Desarrollador</string>
    <string name="pref_colaborador">Colaborador</string>
    <string name="pref_dispositivo">Dispositivo</string>
    <string name="title_activity_container">Contenedor</string>
    <string name="title_activity_main">Opciones</string>
    <string name="teclado">Teclado</string>
    <string name="sonido">Sonido</string>
    <string name="pista">Pista</string>

    <!-- Main -->
    <string name="new_game_text">Nueva partida</string>
    <string name="statistics_text">Resultados</string>
    <string name="settings_text">Opciones</string>

    <!-- Dificutad -->
    <string name="title_dialog_difficulty">Dificultad</string>
    <string name="btn_b1_text">Facil</string>
    <string name="btn_b2excl_text">Medio</string>
    <string name="btn_c1excl_text">Dificil</string>

    <!-- Pause -->
    <string name="pause">Pausa</string>
    <string name="continuar">Continuar</string>
    <string name="otra_partida">Otra Partida</string>
    <string name="menu">Menú</string>
    <string name="otra_vez">Continuar</string>
    <string name="title_activity_game_dialog">GameDialog</string>
    <string name="title_activity_pause_dialog">PauseDialog</string>

    <!-- Extras -->
    <string name="piso">_ _ _ _ _</string>
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="e">e</string>
    <string name="f">f</string>
    <string name="g">g</string>
    <string name="h">h</string>
    <string name="i">i</string>
    <string name="j">j</string>
    <string name="k">k</string>
    <string name="l">l</string>
    <string name="m">m</string>
    <string name="n">n</string>
    <string name="o">o</string>
    <string name="p">p</string>
    <string name="q">q</string>
    <string name="r">r</string>
    <string name="s">s</string>
    <string name="t">t</string>
    <string name="u">u</string>
    <string name="v">v</string>
    <string name="w">w</string>
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="z">z</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="I">I</string>
    <string name="J">J</string>
    <string name="K">K</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="N">N</string>
    <string name="O">O</string>
    <string name="P">P</string>
    <string name="Q">Q</string>
    <string name="R">R</string>
    <string name="S">S</string>
    <string name="T">T</string>
    <string name="U">U</string>
    <string name="V">V</string>
    <string name="W">W</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>
    <string name="title_activity_resultados">Resultados</string>
    <string name="title_activity_games">Ahorcado</string>
    <string name="title_activity_games_dialog">GamesDialog</string>
    <string name="palabra_es">La palabra es:</string>
    <string name="title_activity_sample">Sample</string>

</resources>
