<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="es.makingapps.ahorcado.GameActivity"
    android:orientation="vertical">

    <LinearLayout
    	android:background="@android:color/transparent"        
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/img_ahorcado"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ahorcado_0" />

        <TextView
            android:id="@+id/txt_palabra"
            android:layout_marginBottom="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/piso"
            android:textSize="28sp"
            android:padding="3dip"
            android:gravity="center"/>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2,3,4,5,6,7,8,9,10">

            <TableRow>
                <TextView
                    android:id="@+id/txt_q"
                    android:text="@string/q"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_w"
                    android:text="@string/w"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_e"
                    android:text="@string/e"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/txt_r"
                   android:text="@string/r"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_t"
                    android:text="@string/t"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_y"
                    android:text="@string/y"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_u"
                    android:text="@string/u"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_i"
                    android:text="@string/i"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_o"
                    android:text="@string/o"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_p"
                    android:text="@string/p"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
            </TableRow>
        </TableLayout>
        
        <TableLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2,3,4,5,6,7,8,9">
            <TableRow>
                <TextView
                    android:id="@+id/txt_a"
                    android:text="@string/a"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_s"
                    android:text="@string/s"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_d"
                    android:text="@string/d"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_f"
                    android:text="@string/f"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_g"
                    android:text="@string/g"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_h"
                    android:text="@string/h"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_j"
                    android:text="@string/j"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_k"
                    android:text="@string/k"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_l"
                   android:text="@string/l"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
            </TableRow>
        </TableLayout>
        <TableLayout
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2,3,4,5,6,7">
            <TableRow>
                <TextView
                    android:id="@+id/txt_z"
                    android:text="@string/z"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_x"
                    android:text="@string/x"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_c"
                    android:text="@string/c"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_v"
                   	android:text="@string/v"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_b"
                   	android:text="@string/b"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_n"
                    android:text="@string/n"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/txt_m"
                    android:text="@string/m"
                    android:padding="3dip"
                    android:textSize="26sp"
                    android:gravity="center" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</RelativeLayout>
