<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_orange__50"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"     
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:text="@string/pause"
        android:layout_marginBottom="25dp"        
        android:textSize="26sp"/>

    <Button
    	android:layout_marginLeft="40dp"
    	android:layout_marginRight="40dp"          
        android:id="@+id/btn_continue"        
        style="@style/CustomButton"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"          
        android:layout_gravity="center_horizontal"
        android:text="@string/continuar"/>

    <Button
        style="@style/CustomButton"
        android:id="@+id/btn_again"
        android:layout_marginBottom="15dp"       
        android:textColor="@android:color/white"        
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/otra_partida"/>

    <Button
        style="@style/CustomButton"        
        android:id="@+id/btn_category"
        android:layout_marginBottom="15dp"        
        android:textColor="@android:color/white"        
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title_activity_category"/>    
</LinearLayout>