<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_orange__50"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"     
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_tittle"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="@dimen/title_custom_2"/>

    <TextView
        android:id="@+id/palabra_es"
        android:textColor="@android:color/holo_red_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/palabra_es"
        android:textSize="@dimen/headline"/>
        
    <TextView
        android:id="@+id/tv_word"   
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/backgroud_user"
        android:textSize="@dimen/subhead2"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    
    <Button
        android:id="@+id/btn_again"
        style="@style/CustomButton"        
    	android:layout_marginLeft="40dp"
    	android:layout_marginRight="40dp"          
        android:layout_marginTop="20dp"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"       
        android:layout_gravity="center_horizontal"
        android:text="@string/otra_vez"/>

    <Button
        style="@style/CustomButton"
        android:id="@+id/btn_menu"        
        android:layout_width="170dp"
        android:layout_height="wrap_content"
    	android:layout_marginLeft="40dp"
    	android:layout_marginRight="40dp"                  
        android:layout_marginBottom="15dp"          
        android:layout_gravity="center_horizontal"
        android:text="@string/title_activity_category"/>

</LinearLayout>